# kafka_cluster

./: README.md  pyproject.toml
kafka_cluster/infrastructure/cluster/: k3d_config.yaml
kafka_cluster/infrastructure/ingress/: kafka-tcp-ingress.yaml  kafka-ui-ingress.yaml  traefik-config.yaml  traefik-debug.yaml
kafka_cluster/infrastructure/kafka/: kafka-client.yaml  kafka-init-configmap.yaml  kafka-ui.yaml  kafka_bitnami_with_ingress.yaml  kafka_with_ingress.yaml  kafka_wo_ingress.yaml
kafka_cluster/scripts/: cluster-health.sh  install.sh  uninstall.sh
test/: kafka_meesage.py  kafka_test.py
